hphp/hack/test/typecheck/policied_local_funs.php
<?hh // strict
<<file:__EnableUnstableFeatures('readonly')>>


<<__EntryPoint>>
function test()[policied_local]: void {
  $f = function() : void {
  };
  $g = () ==> {};

}
